nginx/nginx-1.29-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: my-nginx-daemon
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: my-nginx-container
        image: nginx:1.29
        ports:
        - containerPort: 80
